--- a/index.html
+++ b/index.html
@@ -168,15 +168,15 @@
           <div class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
               <img alt="" class="custom-expanded u-expanded-width u-image u-image-round u-radius u-image-2" data-image-width="1280" data-image-height="853" src="images/photo-1541844053589-346841d0b34c.jpeg" data-animation-name="flipIn" data-animation-duration="3000" data-animation-delay="0" data-animation-direction="X">
-              <h5 class="u-custom-font u-font-open-sans u-text u-text-4">Ramkrishna Pal</h5>
-              <p class="u-text u-text-5">Director and President</p>
+              <h5 class="u-custom-font u-font-open-sans u-text u-text-4">Rishabh Pal</h5>
+              <p class="u-text u-text-5">President and CTO</p>
             </div>
           </div>
           <div class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
               <img alt="" class="u-expanded-width u-image u-image-round u-radius u-image-3" data-image-width="1280" data-image-height="720" src="images/photo-1730724742886-b0e36d1eb067.jpeg" data-animation-name="flipIn" data-animation-duration="1000" data-animation-direction="X">
               <h5 class="u-custom-font u-font-open-sans u-text u-text-6">Rishita Pal</h5>
-              <p class="u-text u-text-7">Interim Chief Executive Officer</p>
+              <p class="u-text u-text-7">CEO and CCO</p>
             </div>
           </div>
         </div>
@@ -417,7 +417,7 @@
     
     
     <footer class="u-align-center u-clearfix u-container-align-center u-footer u-grey-80 u-footer" id="sec-e586"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">*Terms and Conditions of Palrishabh.com apply<br>®️Taquion.
+        <p class="u-small-text u-text u-text-variant u-text-1">Powered by palrishabh.com <br/>*Terms and Conditions of Palrishabh.com apply<br>®️Taquion.
         </p>
       </div></footer>
   
