--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             <span class="close-btn">&times;</span>
             <h2 style="color: var(--white); text-align: center;">APPLY NOW</h2>
             <form id="contact-form" class="modal-form" action="https://formsubmit.co/6d79e85254f220adece3092241ddb540" method="POST">
-                <input type="hidden" name="_next" value="https://www.taquion.tech/www.thanks.html">
+                <input type="hidden" name="_next" value="https://www.taquion.tech/thanks.html">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="text" name="name" placeholder="Name" required>
                 <input type="emaiFwhel" name="email" placeholder="Email" required>
@@ -423,7 +423,7 @@
             <h2 class="animate-on-scroll">NEWSLETTER</h2>
             <p style="margin-bottom: 20px;">Stay up to date on our projects and progress.</p>
             <form class="newsletter-bar" action="https://formsubmit.co/6d79e85254f220adece3092241ddb540" method="POST">
-                <input type="hidden" name="_next" value="https://taquion.tech/www.thanks.html">
+                <input type="hidden" name="_next" value="https://www.taquion.tech/thanks.html">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="New Newsletter Signup!">
                 <input type="email" name="email" placeholder="Enter your email address" required>
